--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.4",
+    "@shelex/cypress-allure-plugin": "^2.40.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-mochawesome-reporter": "^3.5.1",
     "cypress-xpath": "^2.0.1"
